--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>com.plugin</groupId>
     <artifactId>graylog-plugin-http-output</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
     <packaging>jar</packaging>
 
     <name>${project.artifactId}</name>
@@ -36,7 +36,7 @@
         <connection>scm:git:git@github.com:SekoiaLab/graylog-http-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:SekoiaLab/graylog-http-plugin.git</developerConnection>
         <url>https://github.com/SekoiaLab/graylog-http-plugin</url>
-        <tag>HEAD</tag>
+        <tag>1.0.4</tag>
     </scm>
 
     <properties>
